# git-gh-automation

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
src/endpoints/: branches.py  commits.py  repositories.py
src/fixtures/: api_fixture.py
src/helpers/: files_helper.py  generators.py  git_helper.py  misc.py  screenshots.py
src/pages/: base_page.py  dashboard.py  login_page.py  new_repository_creation_page.py  top_bar_po.py
src/pages/repository_page/: compare_changes_page.py  pull_request_page.py  pull_requests_page.py  repo_code_page.py  repository_page.py  top_bar_menu.py
src/payload/: file_test_1.py
src/tests/: conftest.py  test_api.py  test_git.py  test_login.py  test_web.py
