[tool.poetry]
name = "git-gh-automation"
version = "0.1.0"
description = "Git automation of GitHub"
authors = ["Przemyslaw Lukasik <przemyslaw.lukasik@vidaa.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
playwright = "^1.50.0"
pytest-playwright = "^0.7.0"
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
